@@ -1,4 +1,5 @@
-﻿- Fix water pumping service support
+﻿- Add train selection to cargo hub
+- Fix water pumping service support
 
 
 Version 1.4 -
